[package]
name = "FileCopyer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
eframe = "0.33"
kamadak-exif = "0.5"
rfd = "0.15"
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
